--- a/app/src/main/res/layout/drawer_main.xml
+++ b/app/src/main/res/layout/drawer_main.xml
@@ -128,7 +128,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/img_office_phone"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="80dp"
