--- a/app/src/main/res/layout/activity_map_detail.xml
+++ b/app/src/main/res/layout/activity_map_detail.xml
@@ -34,26 +34,67 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top|right"
-            android:orientation="horizontal">
+            android:gravity="bottom"
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-            <ImageButton
+            <android.support.v7.widget.CardView
                 android:id="@+id/btn_mylocation"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_mylocation"
-                android:scaleType="centerInside"
-                android:text="내위치" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="2.5dp"
+                android:layout_weight="0.5"
+                android:padding="5dp">
 
-            <ImageButton
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingBottom="4dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="4dp"
+                    app:srcCompat="@drawable/btn_mylocation" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:paddingLeft="40dp"
+                    android:singleLine="false"
+                    android:text="내 위치  " />
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:id="@+id/btn_product"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:background="@drawable/btn_pin"
-                android:elevation="0dp"
-                android:text="업소위치" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="2.5dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="0.5"
+                android:padding="5dp">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingBottom="6dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="6dp"
+                    app:srcCompat="@drawable/btn_pin" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:paddingLeft="40dp"
+                    android:text="업소 위치" />
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
