--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -270,10 +270,10 @@
 
             </LinearLayout>
 
-            <FrameLayout
+            <android.support.v7.widget.CardView
                 android:id="@+id/frame_map"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="@dimen/margin_default"
                 android:background="@color/Red">
 
@@ -282,7 +282,7 @@
                 android:layout_height="fill_parent"
                 android:id="@+id/mapView"/>
 
-            </FrameLayout>
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
