로그인 회원가입 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,9 +152,9 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/space" />
+            android:src="@drawable/space" />ㄴㄴ
 
-        <!--<LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
@@ -245,7 +245,7 @@
                 android:text="회원가입"
                 android:textColor="#1a9eb8" />
 
-        </LinearLayout>-->
+        </LinearLayout>
 
     </LinearLayout>
 
