--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -155,6 +155,15 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_join_privacy"
+                android:layout_marginLeft="2dp"
+                android:text="전문보기"
+                android:textSize="10sp"
+                android:textColor="#1a9eb8"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -185,6 +194,14 @@
                 android:textColor="@color/Black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_join_terms"
+                android:layout_marginLeft="2dp"
+                android:text="전문보기"
+                android:textSize="10sp"
+                android:textColor="#1a9eb8"/>
 
         </LinearLayout>
 
