--- a/app/src/main/res/layout/drawer_main.xml
+++ b/app/src/main/res/layout/drawer_main.xml
@@ -40,7 +40,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_default"
-                        android:text="로그인기능 준비중"
+                        android:text="로그인을 하세요."
                         android:textColor="@color/White"
                         android:textStyle="bold" />
 
