--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,13 +40,13 @@
     <color name="Gold">#FFD700</color>
     <color name="Pink">#FFC0CB</color>
     <color name="LightPink">#FFB6C1</color>
-    <color name="Orange">#FFA500</color>
+    <color name="Orange">#ffa500</color>
     <color name="LightSalmon">#FFA07A</color>
-    <color name="DarkOrange">#FF8C00</color>
+    <color name="DarkOrange">#ff8c00</color>
     <color name="Coral">#FF7F50</color>
     <color name="HotPink">#FF69B4</color>
     <color name="Tomato">#FF6347</color>
-    <color name="OrangeRed">#FF4500</color>
+    <color name="OrangeRed">#ff4500</color>
     <color name="DeepPink">#FF1493</color>
     <color name="Fuchsia">#FF00FF</color>
     <color name="Magenta">#FF00FF</color>
@@ -59,10 +59,10 @@
     <color name="GhostWhite">#F8F8FF</color>
     <color name="MintCream">#F5FFFA</color>
     <color name="WhiteSmoke">#F5F5F5</color>
-    <color name="Beige">#F5F5DC</color>
+    <color name="Beige">#f5f5dc</color>
     <color name="Wheat">#F5DEB3</color>
     <color name="SandyBrown">#F4A460</color>
-    <color name="Azure">#F0FFFF</color>
+    <color name="Azure">#f0ffff</color>
     <color name="Honeydew">#F0FFF0</color>
     <color name="AliceBlue">#f0f8ff</color>
     <color name="Khaki">#F0E68C</color>
@@ -80,7 +80,7 @@
     <color name="Goldenrod">#DAA520</color>
     <color name="Orchid">#DA70D6</color>
     <color name="Thistle">#D8BFD8</color>
-    <color name="LightGrey">#D3D3D3</color>
+    <color name="LightGrey">#e7e7e7</color>
     <color name="Tan">#D2B48C</color>
     <color name="Chocolate">#D2691E</color>
     <color name="Peru">#CD853F</color>
@@ -97,7 +97,7 @@
     <color name="PaleTurquoise">#AFEEEE</color>
     <color name="GreenYellow">#ADFF2F</color>
     <color name="LightBlue">#ADD8E6</color>
-    <color name="DarkGray">#A9A9A9</color>
+    <color name="DarkGray">#a9a9a9</color>
     <color name="Brown">#A52A2A</color>
     <color name="Sienna">#A0522D</color>
     <color name="YellowGreen">#9ACD32</color>
@@ -141,7 +141,7 @@
     <color name="DarkSlateGray">#2F4F4F</color>
     <color name="SeaGreen">#2E8B57</color>
     <color name="ForestGreen">#228B22</color>
-    <color name="LightSeaGreen">#20B2AA</color>
+    <color name="LightSeaGreen">#20b2aa</color>
     <color name="DodgerBlue">#1E90FF</color>
     <color name="MidnightBlue">#191970</color>
     <color name="Aqua">#00FFFF</color>
