--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -22,31 +22,32 @@
             <FrameLayout
                 app:layout_collapseMode="parallax"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
 
                 <com.daimajia.slider.library.SliderLayout
                     android:id="@+id/slider"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp" />
+                    android:layout_height="230dp" />
 
                 <LinearLayout
-                    android:paddingLeft="@dimen/padding_medium"
-                    android:paddingRight="@dimen/padding_medium"
-                    android:layout_margin="@dimen/margin_default"
-                    android:background="@drawable/shape_radius_discount"
-                    android:layout_gravity="top|end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_gravity="top|end"
+                    android:layout_margin="@dimen/margin_default"
+                    android:background="@drawable/shape_radius_discount"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/padding_medium"
+                    android:paddingRight="@dimen/padding_medium">
 
                     <TextView
                         android:id="@+id/tv_discount"
-                        android:textColor="@color/White"
-                        android:text=""
-                        android:gravity="center"
-                        android:textSize="15sp"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text=""
+                        android:textColor="@color/White"
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
@@ -89,48 +90,29 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginTop="16dp"
                         android:orientation="vertical"
                         android:paddingLeft="8dp"
-                        android:paddingRight="8dp">
+                        android:paddingRight="8dp"
+                        android:paddingTop="14dp">
 
-                        <LinearLayout
+                        <TextView
+                            android:id="@+id/tv_name"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
-                            android:orientation="horizontal"
-                            android:paddingLeft="@dimen/padding_default"
-                            android:paddingRight="@dimen/padding_default"
-                            android:paddingTop="@dimen/padding_default">
-
-                            <TextView
-                                android:id="@+id/tv_name"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="[종로] Amare"
-                                android:textColor="@color/Black"
-                                android:textSize="@dimen/text_size_medium"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/lin_tag"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="20dp"
-                            android:gravity="center"
-                            android:orientation="horizontal">
-
-                        </LinearLayout>
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="[종로] Amare"
+                            android:textColor="@color/Black"
+                            android:textSize="@dimen/text_size_medium"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_about"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="14dp"
                             android:paddingLeft="@dimen/padding_medium"
-                            android:paddingRight="@dimen/padding_default"
+                            android:paddingRight="@dimen/padding_medium"
                             android:text="대청 찜질방은 황금불가마 소금 냉방이 준비 되어있고 너무 반갑습니다 여러분 ^^ ~"
                             android:textSize="@dimen/text_size_bsmall" />
 
@@ -220,6 +202,42 @@
                     </android.support.v7.widget.CardView>
 
                 </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="@dimen/margin_medium">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingBottom="16dp"
+                        android:paddingLeft="18dp"
+                        android:paddingTop="14dp"
+                        android:text="편의시설" />
+
+                    <LinearLayout
+                        android:id="@+id/lin_tag"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="16dp"
+                        android:dividerPadding="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+                </LinearLayout>
+
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
@@ -338,9 +356,9 @@
 
                     <com.nhn.android.maps.NMapView
 
-                        android:layout_width="fill_parent"
-                        android:layout_height="200dp"
-                        android:id="@+id/mapView"/>
+                    android:layout_width="fill_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/mapView"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -360,22 +378,20 @@
                                 android:id="@+id/textView9"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
-                                android:background="#1ca0b8"
                                 android:gravity="center"
                                 android:paddingLeft="40dp"
                                 android:singleLine="false"
                                 android:text="도보"
-                                android:textColor="@android:color/white"
                                 android:textStyle="bold" />
 
                             <ImageView
                                 android:id="@+id/imageView2"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
-                                android:paddingBottom="12dp"
+                                android:paddingBottom="8dp"
                                 android:paddingRight="50dp"
-                                android:paddingTop="12dp"
-                                app:srcCompat="@drawable/btn_walk" />
+                                android:paddingTop="8dp"
+                                app:srcCompat="@drawable/ic_btn_walk" />
 
                         </android.support.v7.widget.CardView>
 
@@ -391,21 +407,19 @@
                                 android:id="@+id/textView10"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
-                                android:background="#1ca0b8"
                                 android:gravity="center"
                                 android:paddingLeft="40dp"
                                 android:text="네비"
-                                android:textColor="@android:color/white"
                                 android:textStyle="bold" />
 
                             <ImageView
                                 android:id="@+id/imageView3"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
-                                android:paddingBottom="12dp"
+                                android:paddingBottom="10dp"
                                 android:paddingRight="60dp"
-                                android:paddingTop="12dp"
-                                app:srcCompat="@drawable/btn_navi" />
+                                android:paddingTop="10dp"
+                                app:srcCompat="@drawable/ic_btn_navi" />
 
                         </android.support.v7.widget.CardView>
                     </LinearLayout>
