--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -57,8 +57,8 @@
                 android:id="@+id/lv_near"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/White"
                 android:divider="@android:color/transparent"
-                android:dividerHeight="@dimen/margin_medium"
                 app:parallax_factor="1.9"
                 tools:context=".MainActivity" />
             <!--<ListView-->
