--- a/app/src/main/res/layout/item_near_free.xml
+++ b/app/src/main/res/layout/item_near_free.xml
@@ -1,99 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
-    android:background="@drawable/background_product"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_default">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_km"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:paddingLeft="@dimen/padding_medium"
-        android:textColor="@color/Black"
-        android:textSize="@dimen/text_size_default" />
-
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:paddingLeft="@dimen/padding_medium"
-        android:text="[성수] 보석사우나"
-        android:textColor="@color/Black"
-        android:textSize="@dimen/text_size_default"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:paddingLeft="@dimen/padding_medium"
-        android:text="서울 특별시 중구 태평로"
-        android:textSize="@dimen/text_size_small" />
-
-    <View
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/LightGrey" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:padding="@dimen/padding_default">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding_small">
-
-        <TextView
-            android:id="@+id/tv_price_morning"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:gravity="start"
-            android:text="조조 0000원"
-            android:textAlignment="center"
-            android:textColor="@color/morning_text"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/LightGrey" />
 
-        <TextView
-            android:id="@+id/tv_price_lunch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:gravity="start"
-            android:text="평일 0000원"
-            android:textAlignment="center"
-            android:textColor="@color/lunch_text"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_km"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:paddingLeft="@dimen/padding_medium"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/text_size_default" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/LightGrey" />
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_default"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="@dimen/padding_medium"
+                android:text="[성수] 보석사우나"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/text_size_default"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_price_dinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:gravity="start"
-            android:text="야간 0000원"
-            android:textAlignment="center"
-            android:textColor="@color/dinner_text"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_default"
+                android:paddingLeft="@dimen/padding_medium"
+                android:text="서울 특별시 중구 태평로"
+                android:textSize="@dimen/text_size_small" />
 
-    </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/LightGrey" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="6dp">
+
+                <TextView
+                    android:id="@+id/tv_price_morning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:gravity="start"
+                    android:text="조조 0000원"
+                    android:textAlignment="center"
+                    android:textColor="@color/morning_text"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/LightGrey" />
+
+                <TextView
+                    android:id="@+id/tv_price_lunch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:gravity="start"
+                    android:text="평일 0000원"
+                    android:textAlignment="center"
+                    android:textColor="@color/lunch_text"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/LightGrey" />
+
+                <TextView
+                    android:id="@+id/tv_price_dinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:gravity="start"
+                    android:text="야간 0000원"
+                    android:textAlignment="center"
+                    android:textColor="@color/dinner_text"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
