--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,7 +152,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/space" />ㄴㄴ
+            android:src="@drawable/space" />
 
         <LinearLayout
             android:layout_width="match_parent"
