--- a/app/src/main/res/layout/toolbar_payment.xml
+++ b/app/src/main/res/layout/toolbar_payment.xml
@@ -32,7 +32,7 @@
                 android:layout_gravity="center"
                 android:layout_marginRight="15dp"
                 android:paddingLeft="25dp"
-                android:text="가입"
+                android:text="결제하기"
                 android:textColor="@color/Black"
                 android:textSize="19sp" />
 
