--- a/app/src/main/res/layout/payment.xml
+++ b/app/src/main/res/layout/payment.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/payment_toolbar"
-        layout="@layout/toolbar_login"
+        layout="@layout/toolbar_payment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
