--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -14,11 +14,10 @@
 
     <ListView
         android:id="@+id/lv_near"
-        android:dividerHeight="@dimen/margin_default"
-        android:divider="@color/background"
-        android:padding="@dimen/padding_medium"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></ListView>
+        android:layout_weight="1"
+        android:divider="@color/White"
+        android:dividerHeight="@dimen/margin_default"></ListView>
 
 </LinearLayout>
