--- a/app/src/main/res/layout/drawer_main.xml
+++ b/app/src/main/res/layout/drawer_main.xml
@@ -49,6 +49,30 @@
             </FrameLayout>
 
             <LinearLayout
+                android:id="@+id/lin_ticket"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/White"
+                android:orientation="horizontal"
+                android:padding="@dimen/padding_medium">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center|start"
+                    android:paddingLeft="@dimen/padding_default"
+                    android:text="내 이용권"
+                    android:textColor="@color/Black"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:background="@drawable/ic_more" />
+
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/lin_notice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
