--- a/app/src/main/res/layout/activity_owner.xml
+++ b/app/src/main/res/layout/activity_owner.xml
@@ -29,7 +29,7 @@
                 android:background="@drawable/gp_owner"/>
 
             <ImageButton
-                android:id="@+id/btn_logout"
+                android:id="@+id/ow_btn_logout"
                 android:background="@drawable/ic_logout"
                 android:layout_gravity="end"
                 android:layout_width="32dp"
@@ -42,14 +42,14 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_marginTop="@dimen/margin_large"
-                    android:id="@+id/imv_profile"
+                    android:id="@+id/ow_imv_profile"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:src="@drawable/profile_pic_sample"/>
 
                 <TextView
-                    android:id="@+id/tv_name"
+                    android:id="@+id/ow_tv_name"
                     android:text="로그인을 하세요."
                     android:textColor="@color/White"
                     android:textStyle="bold"
@@ -65,7 +65,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/lin_"
+        android:id="@+id/ow_lin_payment_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/White"
@@ -90,7 +90,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/lin_ticket_search"
+        android:id="@+id/ow_lin_ticket_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/White"
@@ -135,7 +135,7 @@
             android:background="@drawable/img_banner" />
 
         <ImageButton
-            android:id="@+id/btn_request_partner"
+            android:id="@+id/ow_btn_request_partner"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="@dimen/margin_default"
@@ -262,7 +262,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/tv_office_phone"
+                    android:id="@+id/ow_tv_office_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1666-8428"
@@ -278,7 +278,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_terms"
+                    android:id="@+id/ow_tv_terms"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="이용약관"
@@ -294,7 +294,7 @@
                     android:textSize="9sp" />
 
                 <TextView
-                    android:id="@+id/tv_privacy"
+                    android:id="@+id/ow_tv_privacy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
